# AptTools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/apt/: Cargo.toml
crates/apt-aux/: Cargo.toml
crates/apt-aux/src/: dat.rs  lib.rs  ru.rs  texture.rs
crates/apt-convert/: Cargo.toml
crates/apt-convert/examples/: btncheck.rs  checkfixed.rs  frames79.rs  showbounds.rs  texdump.rs  verify.rs  wbits.rs  whoplaces.rs
crates/apt-convert/src/: assets.rs  bitmaps.rs  bytecode.rs  from_swf.rs  geometry.rs  imports.rs  lib.rs  to_swf.rs
crates/apt-convert/tests/: bytecode.rs  textures.rs
crates/apt/examples/: dumpplace.rs
crates/apt/src/: actions.rs  constfile.rs  error.rs  io.rs  lib.rs  parse.rs  types.rs  write.rs
crates/apt/tests/: layouts.rs  roundtrip.rs
crates/apt2swf/: Cargo.toml
crates/apt2swf/src/: main.rs
crates/aptinfo/: Cargo.toml
crates/aptinfo/src/: main.rs
crates/aptview/: Cargo.toml
crates/aptview/src/: main.rs  player.rs  shot.rs
crates/swf2apt/: Cargo.toml
crates/swf2apt/src/: main.rs
