[package]
name = "swf2apt"
description = "Convert SWF files to EA's APT format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apt.workspace = true
apt-convert.workspace = true
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
